@@ -14,6 +14,20 @@
       class=".migration.Migration"
       />
 
+  <!-- Subscribe to some events to keep the SearchableText of an issue
+       in sync with the text of its responses. -->
+  <!--subscriber
+      for="Products.Poi.interfaces.IResponse
+           Products.Archetypes.interfaces.IObjectInitializedEvent"
+      handler=".events.modifiedResponse"
+      /-->
+
+  <subscriber
+      for="Products.Poi.interfaces.IResponse
+           zope.lifecycleevent.interfaces.IObjectModifiedEvent"
+      handler=".events.modifiedResponse"
+      />
+
   <subscriber
       for="Products.Poi.interfaces.IResponse
            zope.app.container.interfaces.IObjectRemovedEvent"
