@@ -7,6 +7,11 @@ Changelog for Poi
 Poi 1.2 - (Unreleased)
 ----------------------
 
+- Use event handlers for keeping the SearchableText of an issue in
+  sync with its responses.  This comes in place of the updateResponses
+  method of an issue that was called by poi_response_update_issue.cpy.
+  [maurits]
+
 - Eggification: Poi/trunk has been moved to
   Products.Poi/trunk/Products/Poi
   [maurits]
